--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -53,7 +53,7 @@
 
 body {
   margin: 0;
-  font-family: "Fira Mono", monospace;
+  font-family: Merriweather, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #333; }
@@ -76,6 +76,10 @@ h5,
 h6 {
   font-weight: 300;
   word-break: break-word; }
+
+h2 small {
+  font-size: 65%;
+  color: #b0b0b0; }
 
 blockquote {
   font-style: italic;
