--- a/store/style.css
+++ b/store/style.css
@@ -3,7 +3,8 @@ td {
 }
 
 table {
-    border-spacing: 1px;
+    border-spacing: 0px;
+    border-style: hidden;
     border-collapse: separate;
     border-width: 0px;
     font-family: monospace;
