--- a/git/rainbou/file/templates/urxvt.html
+++ b/git/rainbou/file/templates/urxvt.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> urxvt (610B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> urxvt (623B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -80,7 +80,7 @@
 *.color4:       $COLOR_4$
 *.color12:      $COLOR_12$
 
-! orange
+! magenta (or orange)
 *.color5:       $COLOR_5$
 *.color13:      $COLOR_13$
 
