--- a/blog/css/main.scss
+++ b/blog/css/main.scss
@@ -14,5 +14,6 @@ $border-color: #ddd;
 @import "color";
 @import "base";
 @import "layout";
-@import "syntax";
+//@import "syntax";
 @import "markdownd";
+@import "solarized-light";
