--- a/.orator_site/layouts/default.html
+++ b/.orator_site/layouts/default.html
@@ -9,6 +9,10 @@
     <meta name="keywords" content="{{ .SiteConfig.Keywords }}">
     <meta name="generator" content="Orator">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/solarized-light.css">
+
+	<script src="/js/highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 {{ end }}
 
