--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -1,1 +1,533 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700);@import url(https://fonts.googleapis.com/css?family=Fira+Mono:700,400&subset=latin,latin-ext);.black{color:#111}.gray{color:#aaa}.silver{color:#ddd}.white{color:#fff}.aqua{color:#7fdbff}.blue{color:#0074d9}.navy{color:#001f3f}.teal{color:#39cccc}.green{color:#2ecc40}.olive{color:#3d9970}.lime{color:#01ff70}.yellow{color:#ffdc00}.orange{color:#ff851b}.red{color:#ff4136}.fuchsia{color:#f012be}.purple{color:#b10dc9}.maroon{color:#85144b}body{margin:0;font-family:Merriweather,Helvetica,Arial,sans-serif;font-size:16px;line-height:1.5;color:#333}p{text-align:justify;word-break:break-word}a{color:#0074d9;text-decoration:none}a:hover{text-decoration:underline}h1,h2,h3,h4,h5,h6{font-weight:300;word-break:break-word}h2 small{font-size:65%;color:#b0b0b0}blockquote{font-style:italic;padding-left:1rem;border-left:3px solid #ddd}img{max-width:100%}table{border-collapse:separate;border-spacing:0;max-width:100%;width:100%}th,td{padding:0.5rem;line-height:inherit}th{text-align:left;vertical-align:bottom;border-bottom:2px solid #ddd}td{vertical-align:top;border-bottom:1px solid #ddd}pre{padding:1.25rem;overflow-x:auto}code{font-family:"Fira Mono",monospace;tab-size:4}hr{border:none;border-top:2px solid #ddd}.caption{display:block;font-style:italic;margin:auto;text-align:center}#back_link{font-size:0.7em;color:#b0b0b0}#back_link:before{content:"<<< "}main{max-width:48rem;margin:0 auto 3rem;padding:0 2rem}.site-header .site-title{font-weight:300}.site-header .site-title>a{color:#333;text-decoration:none}.site-header .site-nav>a{color:#333}.site-header .site-nav>a:hover{text-decoration:none}.site-header .site-nav>a.active{border-bottom:2px solid #666}.site-header .site-nav>a+a{margin-left:1rem}.posts{list-style:none;padding:0}.posts>li{line-height:1.75}.posts>li span{color:#a0a0a0;margin-right:1.5rem;font-size:.875rem}.posts>li a{color:#333;text-decoration:none}.post{position:relative}.post .post-header{text-align:center;margin-bottom:0}.post .post-meta{margin:0;text-align:center;color:#a0a0a0;font-size:.875rem}@media screen and (max-width: 48rem){.site-header .site-title,.site-header .site-nav{text-align:center}}em:before{content:"*";position:relative;vertical-align:super;font-size:75%;font-family:"Fira Mono",monospace}em:after{content:"*";position:relative;vertical-align:super;font-size:75%;font-family:"Fira Mono",monospace}strong:before{content:"**";position:relative;vertical-align:super;font-size:75%;font-family:"Fira Mono",monospace}strong:after{content:"**";position:relative;vertical-align:super;font-size:75%;font-family:"Fira Mono",monospace}h1:before{content:"# ";font-family:"Fira Mono",monospace;color:#b0b0b0}h2:before{content:"## ";font-family:"Fira Mono",monospace;color:#b0b0b0}h3:before{content:"### ";font-family:"Fira Mono",monospace;color:#b0b0b0}h4:before{content:"#### ";font-family:"Fira Mono",monospace;color:#b0b0b0}h5:before{content:"##### ";font-family:"Fira Mono",monospace;color:#b0b0b0}h6:before{content:"###### ";font-family:"Fira Mono",monospace;color:#b0b0b0}pre>code{display:block;overflow-x:auto;padding:0.5em;background:#fdf6e3;color:#657b83}.hljs-comment,.hljs-quote{color:#93a1a1}.hljs-keyword,.hljs-selector-tag,.hljs-addition{color:#859900}.hljs-number,.hljs-string,.hljs-meta .hljs-meta-string,.hljs-literal,.hljs-doctag,.hljs-regexp{color:#2aa198}.hljs-title,.hljs-section,.hljs-name,.hljs-selector-id,.hljs-selector-class{color:#268bd2}.hljs-attribute,.hljs-attr,.hljs-variable,.hljs-template-variable,.hljs-class .hljs-title,.hljs-type{color:#b58900}.hljs-symbol,.hljs-bullet,.hljs-subst,.hljs-meta,.hljs-meta .hljs-keyword,.hljs-selector-attr,.hljs-selector-pseudo,.hljs-link{color:#cb4b16}.hljs-built_in,.hljs-deletion{color:#dc322f}.hljs-formula{background:#eee8d5}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:bold}
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700);
+#back_link {
+  font-size: 0.7em;
+  color: #b0b0b0; }
+
+#back_link::before {
+  content: "<<< "; }
+
+.black {
+  color: #111; }
+
+.gray {
+  color: #aaa; }
+
+.silver {
+  color: #ddd; }
+
+.white {
+  color: #fff; }
+
+.aqua {
+  color: #7fdbff; }
+
+.blue {
+  color: #0074d9; }
+
+.navy {
+  color: #001f3f; }
+
+.teal {
+  color: #39cccc; }
+
+.green {
+  color: #2ecc40; }
+
+.olive {
+  color: #3d9970; }
+
+.lime {
+  color: #01ff70; }
+
+.yellow {
+  color: #ffdc00; }
+
+.orange {
+  color: #ff851b; }
+
+.red {
+  color: #ff4136; }
+
+.fuchsia {
+  color: #f012be; }
+
+.purple {
+  color: #b10dc9; }
+
+.maroon {
+  color: #85144b; }
+
+body {
+  margin: 0;
+  font-family: Merriweather, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333; }
+
+p {
+  text-align: justify;
+  word-break: break-word; }
+
+a {
+  color: #0074d9;
+  text-decoration: none; }
+  a:hover {
+    text-decoration: underline; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 300;
+  word-break: break-word; }
+
+blockquote {
+  font-style: italic;
+  padding-left: 1rem;
+  border-left: 3px solid #ddd; }
+
+img {
+  max-width: 100%; }
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  max-width: 100%;
+  width: 100%; }
+
+th,
+td {
+  padding: 0.5rem;
+  line-height: inherit; }
+
+th {
+  text-align: left;
+  vertical-align: bottom;
+  border-bottom: 2px solid #ddd; }
+
+td {
+  vertical-align: top;
+  border-bottom: 1px solid #ddd; }
+
+pre {
+  padding: 1.25rem;
+  overflow-x: auto; }
+
+code {
+  font-family: 'Courier New',Consolas,monopace;
+  tab-size: 4; }
+
+hr {
+  border: none;
+  border-top: 2px solid #ddd; }
+
+main {
+  max-width: 48rem;
+  margin: 0 auto 3rem;
+  padding: 0 2rem; }
+
+.site-header .site-title {
+  font-weight: 300; }
+  .site-header .site-title > a {
+    color: #333;
+    text-decoration: none; }
+.site-header .site-nav > a {
+  color: #333; }
+  .site-header .site-nav > a:hover {
+    text-decoration: none; }
+  .site-header .site-nav > a.active {
+    border-bottom: 2px solid #666; }
+  .site-header .site-nav > a + a {
+    margin-left: 1rem; }
+
+.posts {
+  list-style: none;
+  padding: 0; }
+  .posts > li {
+    line-height: 1.75; }
+    .posts > li span {
+      color: #a0a0a0;
+      margin-right: 1.5rem;
+      font-size: 0.875rem; }
+    .posts > li a {
+      color: #333;
+      text-decoration: none; }
+
+.post {
+  position: relative; }
+  .post .post-header {
+    text-align: center;
+    margin-bottom: 0; }
+  .post .post-subtitle {
+    text-align: center;
+    margin: 0;
+    font-size: 16px;
+    color: #b0b0b0; }
+  .post .post-meta {
+    margin: 0;
+    text-align: center;
+    color: #a0a0a0;
+    font-size: 0.875rem; }
+
+@media screen and (max-width: 48rem) {
+  .site-header .site-title,
+  .site-header .site-nav {
+    text-align: center; } }
+/* Solarized Light 
+
+For use with Jekyll and Pygments
+
+http://ethanschoonover.com/solarized
+
+SOLARIZED HEX      ROLE
+--------- -------- ------------------------------------------
+base01    #586e75  body text / default code / primary content
+base1     #93a1a1  comments / secondary content
+base3     #fdf6e3  background
+orange    #cb4b16  constants
+red       #dc322f  regex, special keywords
+blue      #268bd2  reserved keywords
+cyan      #2aa198  strings, numbers
+green     #859900  operators, other keywords
+*/
+.highlight {
+  background-color: #fdf6e3;
+  color: #586e75; }
+
+.highlight .lineno {
+  color: #93a1a1; }
+
+/* Line Numbers */
+.highlight .c {
+  color: #93a1a1; }
+
+/* Comment */
+.highlight .err {
+  color: #586e75; }
+
+/* Error */
+.highlight .g {
+  color: #586e75; }
+
+/* Generic */
+.highlight .k {
+  color: #859900; }
+
+/* Keyword */
+.highlight .l {
+  color: #586e75; }
+
+/* Literal */
+.highlight .n {
+  color: #586e75; }
+
+/* Name */
+.highlight .o {
+  color: #859900; }
+
+/* Operator */
+.highlight .x {
+  color: #cb4b16; }
+
+/* Other */
+.highlight .p {
+  color: #586e75; }
+
+/* Punctuation */
+.highlight .cm {
+  color: #93a1a1; }
+
+/* Comment.Multiline */
+.highlight .cp {
+  color: #859900; }
+
+/* Comment.Preproc */
+.highlight .c1 {
+  color: #93a1a1; }
+
+/* Comment.Single */
+.highlight .cs {
+  color: #859900; }
+
+/* Comment.Special */
+.highlight .gd {
+  color: #2aa198; }
+
+/* Generic.Deleted */
+.highlight .ge {
+  color: #586e75;
+  font-style: italic; }
+
+/* Generic.Emph */
+.highlight .gr {
+  color: #dc322f; }
+
+/* Generic.Error */
+.highlight .gh {
+  color: #cb4b16; }
+
+/* Generic.Heading */
+.highlight .gi {
+  color: #859900; }
+
+/* Generic.Inserted */
+.highlight .go {
+  color: #586e75; }
+
+/* Generic.Output */
+.highlight .gp {
+  color: #586e75; }
+
+/* Generic.Prompt */
+.highlight .gs {
+  color: #586e75;
+  font-weight: bold; }
+
+/* Generic.Strong */
+.highlight .gu {
+  color: #cb4b16; }
+
+/* Generic.Subheading */
+.highlight .gt {
+  color: #586e75; }
+
+/* Generic.Traceback */
+.highlight .kc {
+  color: #cb4b16; }
+
+/* Keyword.Constant */
+.highlight .kd {
+  color: #268bd2; }
+
+/* Keyword.Declaration */
+.highlight .kn {
+  color: #859900; }
+
+/* Keyword.Namespace */
+.highlight .kp {
+  color: #859900; }
+
+/* Keyword.Pseudo */
+.highlight .kr {
+  color: #268bd2; }
+
+/* Keyword.Reserved */
+.highlight .kt {
+  color: #dc322f; }
+
+/* Keyword.Type */
+.highlight .ld {
+  color: #586e75; }
+
+/* Literal.Date */
+.highlight .m {
+  color: #2aa198; }
+
+/* Literal.Number */
+.highlight .s {
+  color: #2aa198; }
+
+/* Literal.String */
+.highlight .na {
+  color: #586e75; }
+
+/* Name.Attribute */
+.highlight .nb {
+  color: #B58900; }
+
+/* Name.Builtin */
+.highlight .nc {
+  color: #268bd2; }
+
+/* Name.Class */
+.highlight .no {
+  color: #cb4b16; }
+
+/* Name.Constant */
+.highlight .nd {
+  color: #268bd2; }
+
+/* Name.Decorator */
+.highlight .ni {
+  color: #cb4b16; }
+
+/* Name.Entity */
+.highlight .ne {
+  color: #cb4b16; }
+
+/* Name.Exception */
+.highlight .nf {
+  color: #268bd2; }
+
+/* Name.Function */
+.highlight .nl {
+  color: #586e75; }
+
+/* Name.Label */
+.highlight .nn {
+  color: #586e75; }
+
+/* Name.Namespace */
+.highlight .nx {
+  color: #586e75; }
+
+/* Name.Other */
+.highlight .py {
+  color: #586e75; }
+
+/* Name.Property */
+.highlight .nt {
+  color: #268bd2; }
+
+/* Name.Tag */
+.highlight .nv {
+  color: #268bd2; }
+
+/* Name.Variable */
+.highlight .ow {
+  color: #859900; }
+
+/* Operator.Word */
+.highlight .w {
+  color: #586e75; }
+
+/* Text.Whitespace */
+.highlight .mf {
+  color: #2aa198; }
+
+/* Literal.Number.Float */
+.highlight .mh {
+  color: #2aa198; }
+
+/* Literal.Number.Hex */
+.highlight .mi {
+  color: #2aa198; }
+
+/* Literal.Number.Integer */
+.highlight .mo {
+  color: #2aa198; }
+
+/* Literal.Number.Oct */
+.highlight .sb {
+  color: #93a1a1; }
+
+/* Literal.String.Backtick */
+.highlight .sc {
+  color: #2aa198; }
+
+/* Literal.String.Char */
+.highlight .sd {
+  color: #586e75; }
+
+/* Literal.String.Doc */
+.highlight .s2 {
+  color: #2aa198; }
+
+/* Literal.String.Double */
+.highlight .se {
+  color: #cb4b16; }
+
+/* Literal.String.Escape */
+.highlight .sh {
+  color: #586e75; }
+
+/* Literal.String.Heredoc */
+.highlight .si {
+  color: #2aa198; }
+
+/* Literal.String.Interpol */
+.highlight .sx {
+  color: #2aa198; }
+
+/* Literal.String.Other */
+.highlight .sr {
+  color: #dc322f; }
+
+/* Literal.String.Regex */
+.highlight .s1 {
+  color: #2aa198; }
+
+/* Literal.String.Single */
+.highlight .ss {
+  color: #2aa198; }
+
+/* Literal.String.Symbol */
+.highlight .bp {
+  color: #268bd2; }
+
+/* Name.Builtin.Pseudo */
+.highlight .vc {
+  color: #268bd2; }
+
+/* Name.Variable.Class */
+.highlight .vg {
+  color: #268bd2; }
+
+/* Name.Variable.Global */
+.highlight .vi {
+  color: #268bd2; }
+
+/* Name.Variable.Instance */
+.highlight .il {
+  color: #2aa198; }
+
+/* Literal.Number.Integer.Long */
+em:before {
+  content: "*";
+  position: relative;
+  vertical-align: super;
+  font-size: 75%;
+  font-family: "Fira Mono", monospace; }
+
+em:after {
+  content: "*";
+  position: relative;
+  vertical-align: super;
+  font-size: 75%;
+  font-family: "Fira Mono", monospace; }
+
+strong:before {
+  content: "**";
+  position: relative;
+  vertical-align: super;
+  font-size: 75%;
+  font-family: "Fira Mono", monospace; }
+
+strong:after {
+  content: "**";
+  position: relative;
+  vertical-align: super;
+  font-size: 75%;
+  font-family: "Fira Mono", monospace; }
+
+h1:before {
+  content: "# ";
+  font-family: "Fira Mono", monospace;
+  color: #b0b0b0; }
+
+h2:before {
+  content: "## ";
+  font-family: "Fira Mono", monospace;
+  color: #b0b0b0; }
+
+h3:before {
+  content: "### ";
+  font-family: "Fira Mono", monospace;
+  color: #b0b0b0; }
+
+h4:before {
+  content: "#### ";
+  font-family: "Fira Mono", monospace;
+  color: #b0b0b0; }
+
+h5:before {
+  content: "##### ";
+  font-family: "Fira Mono", monospace;
+  color: #b0b0b0; }
+
+h6:before {
+  content: "###### ";
+  font-family: "Fira Mono", monospace;
+  color: #b0b0b0; }
