--- a/.orator_site/layouts/default.html
+++ b/.orator_site/layouts/default.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/solarized-dark.css">
+    <link rel="stylesheet" href="/css/csshake-default.min.css">
     <link rel="icon" href="/favicon.png">
 
 	<script src="/js/highlight.pack.js"></script>
@@ -23,7 +24,7 @@
 {{ end }}
 
 {{ define "header" }}
-<a href="/"><h1>tudor roman</h1></a>
+<a class="shake" href="/"><h1>tudor roman</h1></a>
 {{ end }}
 
 {{ define "default" }}
