--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700);
+@import url("https://fonts.googleapis.com/css?family=Fira+Mono");
 #back_link {
   font-size: 0.7em;
   color: #b0b0b0; }
@@ -116,7 +117,7 @@ pre {
   overflow-x: auto; }
 
 code {
-  font-family: 'Courier New',Consolas,monopace;
+  font-family: "Fira Mono", monospace;
   tab-size: 4; }
 
 hr {
