--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700);
 @import url("https://fonts.googleapis.com/css?family=Fira+Mono");
 #back_link {
   font-size: 0.7em;
