Small changes (colors)

--- a/.orator_site/layouts/default.html
+++ b/.orator_site/layouts/default.html
@@ -4,19 +4,20 @@
 	<title>
 		{{ if $title }}{{ $title }} - {{end}}{{ .SiteConfig.Title }}
 	</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="{{ .SiteConfig.Author }}">
-    <meta name="description" content="{{ .SiteConfig.Description }}">
-    <meta name="keywords" content="{{ .SiteConfig.Keywords }}">
-    <meta name="generator" content="Orator">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="{{ .SiteConfig.Author }}">
+	<meta name="description" content="{{ .SiteConfig.Description }}">
+	<meta name="keywords" content="{{ .SiteConfig.Keywords }}">
+	<meta name="generator" content="Orator">
 
 	<meta name="theme-color" content="{{ index .SiteConfig.Extra "themecolor" }}">
 
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/solarized-dark.css">
-    <link rel="stylesheet" href="/css/csshake-default.min.css">
-    <link rel="icon" href="/favicon.png">
+	<link rel="stylesheet" href="/css/colors.css">
+	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/css/solarized-dark.css">
+	<link rel="stylesheet" href="/css/csshake-default.min.css">
+	<link rel="icon" href="/favicon.png">
 
 	<script src="/js/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
