--- a/.orator_site/static/css/main.css
+++ b/.orator_site/static/css/main.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #273941;
+    background-color: var(--bg-color);
     font-family: "Share Tech Mono", monospace;
 }
 
@@ -16,20 +16,19 @@ main {
     padding: 10vh 2rem;
     max-width: 48rem;
     margin: 0 auto 3rem;
-    color: #c0c5ce;
-    /*margin-bottom: 200px;*/
+    color: var(--fg-color);
     text-align: left;
 }
 
 h1 {
-    color: #6dc2a3;
+    color: var(--color10);
     font-family: "Envy Code R";
     font-weight: bold;
     font-size: 2em;
 }
 
 h2 {
-    color: #a66363;
+    color: var(--color1);
     font-size: 1.5em;
     font-family: "Envy Code R";
     font-weight: bold;
@@ -38,25 +37,25 @@ h2 {
 h2 a:link,
 h2 a:visited {
     font-size: inherit;
-    color: #a66363;
+    color: var(--color1);
 }
 
 h3 {
     font-family: "Envy Code R";
     font-weight: normal;
-    color: #63a69b;
+    color: var(--color6);
     font-size: 1.5em;
 }
 
 h4 {
     font-family: "Envy Code R";
     font-weight: normal;
-    color: #63a69b;
+    color: var(--color6);
     font-size: 1em;
 }
 
 h5 {
-    color: #a66363;
+    color: var(--color1);
     font-size: 0.7em;
     font-family: "Share Tech Mono";
 }
@@ -66,18 +65,18 @@ a {
 }
 
 a:link, a:visited, .fakelink {
-    color: #6385a6;
+    color: var(--color4);
     cursor: pointer;
 }
 
 code {
     font-family: "Roboto Mono", monospace;
-    color: #eff1f5;
+    color: var(--color15);
 }
 
 pre code {
     font-family: "Roboto Mono", monospace;
-    color: #c0c5ce;
+    color: var(--fg-color);
 }
 
 ul {
@@ -93,7 +92,7 @@ li {
 
 li:before {
 	content: "*";
-	color: #456472;
+	color: var(--color8);
 	padding-right: 0.5em;
 }
 
