--- a/.orator_site/layouts/default.html
+++ b/.orator_site/layouts/default.html
@@ -13,14 +13,13 @@
 
 	<meta name="theme-color" content="{{ index .SiteConfig.Extra "themecolor" }}">
 
+	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+	<link rel="stylesheet" href="/css/fonts.css" media="none" onload="this.media='all';">
+	<noscript><link rel="stylesheet" href="/css/fonts.css"></noscript>
 	<link rel="stylesheet" href="/css/colors.css">
 	<link rel="stylesheet" href="/css/main.css">
-	<link rel="stylesheet" href="/css/solarized-dark.css">
 	<link rel="stylesheet" href="/css/csshake-default.min.css">
 	<link rel="icon" href="/favicon.png">
-
-	<script src="/js/highlight.pack.js"></script>
-	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 {{ end }}
 
