--- a/layouts/default.html
+++ b/layouts/default.html
@@ -13,8 +13,8 @@
 
 	<meta name="theme-color" content="{{ index .SiteConfig.Extra "themecolor" }}">
 
-	<link rel="stylesheet" href="/css/fonts.css" media="none" onload="this.media='all';">
-	<noscript><link rel="stylesheet" href="/css/fonts.css"></noscript>
+	<link rel="preload" as="style" href="/css/fonts.css">
+	<link rel="stylesheet" href="/css/fonts.css">
 	<link rel="stylesheet" href="/css/colors.css">
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="/css/csshake-default.min.css">
