--- a/layouts/default.html
+++ b/layouts/default.html
@@ -17,13 +17,12 @@
 	<link rel="stylesheet" href="/css/fonts.css">
 	<link rel="stylesheet" href="/css/colors.css">
 	<link rel="stylesheet" href="/css/main.css">
-	<link rel="stylesheet" href="/css/csshake-default.min.css">
 	<link rel="icon" href="/favicon.png">
 </head>
 {{ end }}
 
 {{ define "header" }}
-<a class="shake" href="/"><h1>tudor roman</h1></a>
+<a href="/"><h1>tudor roman</h1></a>
 {{ end }}
 
 {{ define "default" }}
