--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,8 +105,12 @@ li::marker {
 .home-links li {
 	display: inline-block;
 	list-style: none;
-	margin: 0 5px;
-	padding: 0;
+	margin: 0;
+	padding: 0 5px;
+}
+
+.home-links li:first-of-type {
+	padding-left: 0;
 }
 
 main img {
